--- a/package.json
+++ b/package.json
@@ -1,20 +1,29 @@
 {
-  "name": "GoStackFrontend",
+  "name": "frontend",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "yarn webpack serve --mode development",
+    "build": "webpack --mode production"
+  },
   "dependencies": {
     "@babel/cli": "^7.14.8",
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
+    "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
+    "css-loader": "^6.2.0",
+    "file-loader": "^6.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "style-loader": "^3.2.1",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.8.0"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.15.0",
     "webpack-dev-server": "^3.11.2"
   }
 }
