--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
     "file-loader": "^6.2.0",
+    "git-commit-msg-linter": "^3.2.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "style-loader": "^3.2.1",
